# helm-chart-experiment

./: .pre-commit-config.yaml  README.md  index.yaml
.github/workflows/: release.yaml
charts/example_server/: Chart.yaml  values.yaml
charts/example_server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/example_server/templates/tests/: test-connection.yaml
example_server/: Dockerfile  README.md  setup.cfg  setup.py
example_server/example_server/: __main__.py
example_server/src/example_server/: __init__.py  example_server.py
