[metadata]
name = example_server
version = attr: example_server.__version__
url = https://github.com/balihb/helm-chart-experiment
author = Balazs Hamorszky
author_email = balihb@gmail.com

[options]
install_requires =
    jsonpickle == 2.0.0
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    example-server = example_server.__main__:main

[options.package_data]
* = VERSION
